# plex-media-formatter

./: .env.template  .gitignore  README.md  main.py  plex-fmt.bat  plex-fmt.sh  pyproject.toml
src/plex_media_formatter/api/: __init__.py  base.py  factory.py  jikan.py  tmdb.py
src/plex_media_formatter/cli/: app.py
src/plex_media_formatter/config/: __init__.py  setting.py
src/plex_media_formatter/core/: __init__.py  discovery.py  execute.py  history.py  manifest.py  mapper.py  models.py  offset.py
tests/: conftest.py  test_executor.py  test_history.py  test_manifest.py  test_mapper.py  test_offset.py  test_scanner.py  test_utils.py
