[project]
name = "plex-media-formatter"
version = "0.1.0"
description = "Manifest-driven CLI to transform raw optical media outputs into Plex-compliant directory structures"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/plex_media_formatter"]

[project.scripts]
plex-fmt = "plex_media_formatter.cli.app:app"
